--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
             "PHPViet\\NumberToWords\\Tests\\": "tests"
         }
     },
+    "scripts": {
+        "test": "\"vendor/bin/phpunit\""
+    },
     "config": {
         "sort-packages": true
     },
